===== Released as 0.6.6 (2012-04-10) =====
* added function 'pjacobian' which is a parallel version of 'numDeriv::jacobian'
* added package 'numDeriv' to suggested packages

===== Released as 0.6.5 (2012-03-23) =====
* added function 'recycle' for the safe recycling of a vector
* updated argument of function 'isFALSE' to match the format of 'isTRUE'
* added dummy manual file '.empty.Rd' which can be used for new code object
  documentations
* added documentation entry 'Undocumented' which includes all undocumented
  code objects
* changed naming convention of documentation files
* added documentation for some code objects

===== Released as 0.6.4 (2012-02-20) =====
* fixed bug in function 'readImage', now an error is triggered if no image
  file was found for a given 'filename' argument

===== Released as 0.6.3 (2012-02-18) =====
* changed package startup message to only appear for interactive sessions
* changed last parameter name of function 'minRequiredVersion' from 'fix'
  to 'patch', removed constraint of checked version to be at least 0.6.0
  and set all three default parameter values to '0L' (this allows easier
  checks for main and subversions, e.g. 'minRequiredVersion(1)')

===== Released as 0.6.2 (2012-02-17) =====
* added function 'match.args' which behaves similar to 'match.arg' with
  'several.ok=TRUE' but with some more security checks/features

===== Released as 0.6.1 (2012-02-16) =====
* updated function 'is.directory' to be more robust concerning its inputs
  (e.g. 'is.directory(NULL)' now returns 'NULL', as expected)

===== Released as 0.6.0 (2012-02-15) =====
* added function 'minRequiredVersion' to ensure a certain version of this
  package is used
* added function 'is.directory' to check if a file exists and if it is a
  directory
* added function 'paste0' as wrapper for 'paste' with 'sep=""'
* added function 'clip' to clip values of objects to a certain range

===== Released as 0.5.5 (2012-02-14) =====